--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -13,7 +13,7 @@
 
 .image {
 	height: 30vw;
-	background-image: url(/assets/profile.jpg);
+	background-image: url(/assets/noe-vzqvba5rxqk-unsplash.jpg);
 	background-size: cover;
 	background-position: center;
 }
